--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "weave-haven-root",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd backend && npm start",
+    "client": "cd frontend && npm start"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "npm-run-all": "^4.1.5"
+  },
   "dependencies": {
     "react-icons": "^5.5.0"
   }
