--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "npm-run-all": "^4.1.5"
   },
   "dependencies": {
-    "react-icons": "^5.5.0"
+    "fs-extra": "^11.3.0",
+    "handlebars": "^4.7.8",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.2",
+    "react-icons": "^5.5.0",
+    "react-inner-image-zoom": "^4.0.1",
+    "react-medium-image-zoom": "^5.2.14"
   }
 }
